# weather_display

./: .gitignore  LICENSE  README.md
eink-idf-port/: CMakeLists.txt  README.md
eink-idf-port/components/eink_hat_drivers/: CMakeLists.txt  eink_hat_drivers.c
eink-idf-port/main/: CMakeLists.txt  WMOWeatherCodes.c  WMOWeatherCodes.h  main.c
eink-idf-port/main/eink_drivers/: DEV_Config.cpp  DEV_Config.h  Debug.h  EPD.h  EPD_7in5_V2.cpp  EPD_7in5_V2.h  GUI_Paint.h  epd7in5_V2-demo.cpp  fonts.h
working arduino demo/epd7in5_V2-demo/: DEV_Config.h
